<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_simple" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_into_sreen" />

    <View
        android:id="@+id/ViewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="45dp">

                <TextView
                    android:id="@+id/signuptxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    android:text="@string/intro"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <!--                <ImageView-->
                <!--                    android:layout_width="50dp"-->
                <!--                    android:layout_height="50dp"-->
                <!--                    android:layout_alignEnd="@id/signuptxt"-->
                <!--                    android:layout_marginRight="1dp"-->
                <!--                    android:src="@drawable/logonew"/>-->

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signuptxt"
                    android:layout_marginTop="-10dp"
                    android:padding="5dp"
                    android:text="@string/donor_desc"
                    android:textColor="@color/hint_textcolor"
                    android:textStyle="bold" />

                <com.agrawalsuneet.dotsloader.loaders.LazyLoader
                    android:id="@+id/loader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textview"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    app:lazyloader_animDur="800"
                    app:lazyloader_dotsDist="10dp"
                    app:lazyloader_dotsRadius="10dp"
                    app:lazyloader_firstDelayDur="150"
                    app:lazyloader_firstDotColor="@color/col_red"
                    app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
                    app:lazyloader_secondDelayDur="300"
                    app:lazyloader_secondDotColor="@color/success"
                    app:lazyloader_thirdDotColor="@color/col_yellow" />


                <EditText
                    android:id="@+id/fullnameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loader"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_txt_bg_shape"
                    android:ems="10"
                    android:hint="Full Name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fullnameEt"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_txt_bg_shape"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/idEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailEt"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_txt_bg_shape"
                    android:ems="10"
                    android:hint="ID Number"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/phoneEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idEt"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_txt_bg_shape"
                    android:ems="10"
                    android:hint="Mobile"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <TextView
                    android:id="@+id/selectBloodGroupEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phoneEt"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_txt_bg_shape"
                    android:backgroundTintMode="src_over"
                    android:drawableRight="@drawable/ic_down"
                    android:drawableTint="@color/white"
                    android:editable="false"
                    android:ems="10"
                    android:foregroundTint="@color/white"
                    android:hint="Blood Group"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/selectBloodGroupEt"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_txt_bg_shape"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/conPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordEt"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_txt_bg_shape"
                    android:ems="10"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/conPasswordEt"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/donorRb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/col_red"
                        android:text="Donor"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                    <RadioButton
                        android:id="@+id/receptionRb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/col_red"
                        android:text="Reception"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear1"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_signup_btn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/donor_register"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/already"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnRegister"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="bottom"
                    android:orientation="vertical">


                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/donor_already_account"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/btnsignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/donor_sign_up"
                        android:textAlignment="center"
                        android:textColor="@color/success"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>